--- a/mission/styles.css
+++ b/mission/styles.css
@@ -1,5 +1,8 @@
 h1{
     text-align: center;
+    line-height: 1.5;
+    letter-spacing: 3px;
+    text-transform: capitalize;
 }
 h2{
     text-align: center;
@@ -13,4 +16,8 @@ p{
 }
 ol{
     text-align: left;
+}
+#content{
+    max-width: 600px;
+    
 }
