--- a/mission/styles.css
+++ b/mission/styles.css
@@ -50,3 +50,13 @@ img{
     padding-top: 30px;
     padding-bottom: 30px;
 }
+
+.dark{
+    background-color: #333;
+    color: white;
+}
+
+.dark h2{
+    color: #4F9ACF;
+}
+        
