--- a/week3/media-query.css
+++ b/week3/media-query.css
@@ -11,7 +11,7 @@ header{
 }
 main{
     display: grid;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: 1fr;
     grid-gap: 1rem;
     max-width: 640px;
     margin: 1rem auto;
@@ -29,4 +29,12 @@ footer{
 section{
     background-color: white;
     padding: 10px 10px;
+}
+
+@media screen and (min-width: 500px) {
+
+    main {
+        grid-template-columns: 1fr 1fr;
+    }
+
 }
