--- a/coolpics/coolpics.css
+++ b/coolpics/coolpics.css
@@ -40,11 +40,20 @@ header{
     font-size: 28px;
     
 }
-nav, a{
+nav a{
     color: white;
     font-size: 24px;
     display: block;
 }
+
+nav{
+    display: none;
+}
+
+.show{
+    display: block;
+}
+
 body{
     background-color: rgb(234, 228, 228);
 }
@@ -53,6 +62,9 @@ body{
 
      nav{
         display: none;
+     }
+     nav a{
+        display: block;
      }
 
      .gallery{
@@ -78,7 +90,7 @@ body{
         display: none;
     }
 
-    nav, a{
+    nav a{
         margin:30px;
         display: inline;
     }
