--- a/coolpics/coolpics.css
+++ b/coolpics/coolpics.css
@@ -1,4 +1,4 @@
-img{
+main img{
     max-width: 100%;
     height: 250px;
     width: 250px;
@@ -58,6 +58,38 @@ body{
     background-color: rgb(234, 228, 228);
 }
 
+.viewer{
+    display: grid;
+    position: fixed;
+    top:0;
+    left:0;
+    bottom:0;
+    right:0;
+    background-color: rgba(0, 0, 0, 0.75);
+}
+.viewer img{
+    max-height: 100%;
+    max-width: 100%;
+    width: 80%;
+    object-fit: cover;
+    display: block;
+    margin: 0 auto;
+}
+
+
+.viewer button{
+    height: 20px;
+    width: 30px;
+    text-align: center;
+    justify-self: end;
+    align-self: center;
+    background-color: rgba(0, 0, 0, 0.0);
+    border: none;
+    color: white;
+    font-size: 24px;
+    margin-right: 50px;
+}
+
 @media screen and (min-width: 700px) {
 
      nav{
@@ -86,12 +118,22 @@ body{
        grid-template-columns: 1fr 1fr 1fr;
     }
 
-    button{
+    #menu-button{
         display: none;
     }
 
     nav a{
         margin:30px;
         display: inline;
+    }
+    .viewer{
+        top:50px;
+        left:50px;
+        bottom:50px;
+        right:50px;
+    }
+
+    .viewer img {
+        max-height: calc(100% - 50px);
     }
 }
