--- a/creditcard/style.css
+++ b/creditcard/style.css
@@ -1,12 +1,117 @@
 form{
     display: grid;
-    grid-template-rows: auto auto;
-}
+    grid-template-rows: 50px auto 50px auto;
+    width: 700px;
+    grid-template-columns: 100px 1fr 50px 100px;
+    }
 
 #front{
     display: grid;
     grid-template-rows: auto auto auto;
-    background-color: gray;
+    background-color: rgb(211, 211, 211);
     border-radius: 10px;
+    padding: 20px;
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.25);;
+    grid-column: 1/3;
+    grid-row: 1/3;
+    z-index: 1;
+}
+#back{
+    display: grid;
+    grid-template-rows: 50px auto auto 50px;
+    background-color: rgb(211, 211, 211);
+    border-radius: 10px;
+    box-shadow: 10px 10px 5px 0px rgba(88, 86, 86, 0.25);;
+    grid-column: 2/5;
+    grid-row: 2/4;
+    z-index: -1;
 
 }
+button{
+    margin-top: 20px;
+    grid-row: 4/5;
+    grid-column: 4/5;
+    height: 30px;
+}
+
+#blackstripe{
+    height: 50px;
+    background-color: black;
+    grid-row: 2/3;
+    margin-bottom: 30px;
+}
+#backrow1{
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr 100px 20px;
+    grid-row: 3/4;
+
+}
+#backrow1 label{
+    grid-column: 2/3;
+}
+#backrow1 input{
+    grid-column: 2/3;
+}
+
+
+#row1{
+    display: flex;
+    justify-content: space-between;
+}
+#row2 input{
+    width: 100%;
+    
+}
+input{
+   height: 20px;
+   padding-left: 5px;
+   margin-bottom: 5px;
+
+}
+label{
+    display: block;
+    margin-bottom: 5px;
+}
+#row3{
+    display: grid;
+    grid-template-columns: 60% 10% 10%;
+    grid-template-rows: auto auto;
+    grid-column-gap: 10px;
+}
+#experationmonth{
+    width: 40px;
+}
+#experationyear{
+    width: 40px;
+    
+}
+#cardholder{
+    grid-row: 1/2;
+    grid-column: 1/2;
+    width: 100px;
+   
+}
+#experationmonth{
+    grid-row: 1/2;
+    grid-column: 2/3;
+    margin-left: 5px;
+}
+#experationyear{
+    grid-row: 1/2;
+    grid-column: 3/4;
+    margin-left: 5px;
+}
+
+#month{
+    grid-row: 2/3;
+}
+
+#year{
+    grid-row: 2/3;
+}
+
+#holder{
+    grid-row: 2/3;
+}
+
