--- a/recipes/recipes.css
+++ b/recipes/recipes.css
@@ -50,7 +50,7 @@ header {
 }
 
 header h1{
-    font-family: "Amatic SC", Arial, Helvetica, sans-serif;
+    font-family: "Shadows Into Light", Arial, Helvetica, sans-serif;
     font-size: 60px;
 }
 
@@ -82,7 +82,7 @@ header img{
 #main-content h1{
     margin: 0px;
     color: #1B98E0;
-    font-family: "Amatic SC", Arial, Helvetica, sans-serif;
+    font-family: "Shadows Into Light", Arial, Helvetica, sans-serif;
 }
 
 
