--- a/final/styles/models.css
+++ b/final/styles/models.css
@@ -14,6 +14,8 @@ nav{
 header .logo{
     object-fit: cover;
     width: 100%;
+    margin-left: 20px;
+    
    
 }
 
@@ -90,18 +92,37 @@ h4{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 1140px;
+   
+}
+
+#impact-legacy{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+    width: 1140px;
+}
+
+#impact-legacy h2{
+    margin-left: 100px;
+    font-family: "kanit", Arial, Helvetica, sans-serif;
+    color: #DB162F;
+    font-size: 40px;
 }
 
 #rise-snowboarding-img{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 1140px;
 }
 
 #snowboarding-modern-img{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 1140px;
 }
 
 footer{
