--- a/final/styles/home.css
+++ b/final/styles/home.css
@@ -59,9 +59,7 @@ header .logo{
     grid-column: 1/2;
 }
 
-.little-blue-highlight{
-    color: #2A73C7;
-}
+
 nav a{
     font-size: 30px;
     font-weight: 600;
@@ -72,7 +70,6 @@ nav a{
     padding: 10px;
     margin: 20px 0 0 0 ;
     text-decoration: none;
-
 }
 
 img{
@@ -82,22 +79,6 @@ img{
     width: auto;
 }
 
-
-#europe-title{
-    text-align: center;
-    font-family: "kanit", Arial, Helvetica, sans-serif;
-    font-size: 60px;
-    font-weight: 600;
-    color: #2A73C7;
-}
-
-#north-america-title{
-    text-align: center;
-    font-family: "kanit", Arial, Helvetica, sans-serif;
-    font-size: 60px;
-    font-weight: 600;
-    color: #2A73C7;
-}
 header h4{
     grid-row: 3/4;
     grid-column: 1/4;
@@ -109,19 +90,32 @@ header h4{
     font-family: "fira sans", Arial, Helvetica, sans-serif;
 }
 
-h2{
-    margin-left: 100px;
-    font-family: "kanit", Arial, Helvetica, sans-serif;
-    color: black;
-    font-size: 30px;
-}
-
-h4{
+#msg h4{
     margin-left: 100px;
     margin-right: 150px;
     font-family: "fira sans", Arial, Helvetica, sans-serif;
     font-size: 22px;
     font-weight: 425;
+}
+
+
+p{
+    margin-left: 100px;
+    margin-right: 150px;
+    font-family: "Lato", Arial, Helvetica, sans-serif;
+    font-size: 22px;
+    font-weight: 425;
+}
+a{
+    
+}
+
+h1{
+    text-align: center;
+    color: #DB162F;
+    font-family: "Roboto", Arial, Helvetica, sans-serif;
+    font-size: 60px;
+    font-weight: 600;
 }
 
 
@@ -162,11 +156,6 @@ footer img{
     grid-row: 1/2;
 }
 
-a:hover, #footer-navigation p a:hover{
-    text-decoration: underline;
-}
-
-
 .carousel-cell {
     width: 100%; /* full width */
     height: 450px; /* height of carousel */
@@ -174,12 +163,12 @@ a:hover, #footer-navigation p a:hover{
 
   }
 
-  .flickity-prev-next-button {
+.flickity-prev-next-button {
     margin: 0 30px;
     background-color: white;
-  }
+}
 
-  .msg{
+.msg{
     display: grid;
     grid-template-columns: 1fr 100px 1fr;
     grid-template-rows: auto;
@@ -188,49 +177,5 @@ a:hover, #footer-navigation p a:hover{
     width: 90%;
 }
 
-.msg img{
-    grid-column: 2/3;
-    grid-row: 1/2;
-    z-index: -1;
-    width: 600px;
-}
-
-.msg .container{
-    grid-column: 1/3;
-    grid-row: 1/2;
-}
-
-.container{
-    background-color: #D5C7BC;
-    border-radius: 7px;
-    height: 300px;
-    text-align: center;
-    padding: 20px 25px;
-    box-shadow: 5px 5px 10px #86615C;
-    color: black;
-}
-
-.container a{
-    display: inline-block;
-    background-color: #86615C;
-    margin: 25px 25px 40px 25px;
-    text-decoration: none;
-    color: white;
-    padding: 10px 12px ;
-    border-radius: 7px;
-    font-size: 20px;
-    font-family: "kanit", Arial, Helvetica, sans-serif;
-    text-transform: uppercase;
-
-}
-
-.container h2{
-    font-size: 30px;
-    font-family: "kanit", Arial, Helvetica, sans-serif;
-}
-
-.container p{
-    font-family: "fira sans", Arial, Helvetica, sans-serif;
-}
 
   
