removed underlined link text

--- a/final/styles/home.css
+++ b/final/styles/home.css
@@ -154,7 +154,7 @@ footer{
 
 }
 #footer-navigation p a{
-    text-decoration: underline;
+    text-decoration: none;
     color: black;
     font-family: "lato", Arial, Helvetica, sans-serif;
 }
