--- a/final/styles/home.css
+++ b/final/styles/home.css
@@ -131,37 +131,31 @@ h1{
 
 footer{
     display: grid;
-    grid-template-rows: 157px;
-    grid-template-columns: 157px 1fr ;
+    grid-template-columns: auto auto auto auto ;
+    grid-column-gap: 20px;
 }
 
-#footer-navigation{
-    display: flex;
-    align-self: center;
-    justify-self: center;
-    grid-row: 1/2;
-    grid-column: 1/3;
 
-}
-
-#footer-navigation p{
+footer p{
     margin: 10px;
     font-size: 24px;
     text-decoration: none;
     color: black;
     font-family: "lato", Arial, Helvetica, sans-serif;
+    align-self: center;
 
 
 }
-#footer-navigation p a{
+footer p a{
     text-decoration: none;
     color: black;
     font-family: "lato", Arial, Helvetica, sans-serif;
+    
 }
 
 footer img{
     object-fit: cover;
-    width: 100%;
+    width: 300px;
     grid-column: 1/2;
     grid-row: 1/2;
 }
@@ -186,6 +180,41 @@ footer img{
     margin: 50px 50px;
     width: 90%;
 }
+
+@media screen and (max-width: 480px) {
+   p {
+    margin: 20px;
+   }
+
+   h2 {
+    margin: 0 20px;
+    text-align: center;
+   }
+
+   footer {
+    grid-template-columns: 1fr;
+   }
+
+   footer img {
+    width: 200px;
+   }
+
+   footer p {
+    text-align: center;
+   }
+
+   header {
+    grid-template-columns: 1fr 1fr 1fr;
+   }
+
+   #hero-msg h2 {
+    font-size: 40px;
+   }
+
+   #hero-msg h4 {
+    font-size: 20px;
+   }
+  }
 
 
   
