--- a/final/styles/home.css
+++ b/final/styles/home.css
@@ -214,6 +214,18 @@ footer img{
    #hero-msg h4 {
     font-size: 20px;
    }
+
+   header .logo{
+    object-fit: cover;
+    width: 100%;
+    margin-left: 20px;
+    }
+    nav a{
+        font-size: 26px;
+    }
+    #logo_link{
+    display: none;
+    }
   }
 
 
