--- a/final/styles/models.css
+++ b/final/styles/models.css
@@ -11,6 +11,10 @@ nav{
     grid-column: 1/3;
 }
 
+img{
+    margin: 0 auto;
+}
+
 header .logo{
     object-fit: cover;
     width: 100%;
@@ -165,6 +169,82 @@ footer img{
 
 a:hover, #footer-navigation p a:hover{
     text-decoration: underline;
+}
+
+@media screen and (max-width: 480px) {
+    h4{
+        margin: 20px;
+
+    }
+    
+    header h4{
+        color: black;
+        margin: 20px;
+        text-align: left;
+    }
+
+    h2{
+        text-align: left;
+        margin: 20px;
+    }
+    header{
+        display: grid;
+        grid-template-rows: 120px 157px;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    header h1{
+        grid-row: 2/3;
+        font-size: 30px;
+        text-align: center;
+        margin: 0 10px;
+    }
+
+    header .logo{
+        object-fit: cover;
+        width: 100%;
+        margin-left: 20px;
+    }
+
+    nav a{
+        font-size: 26px;
+    }
+
+    #logo-link{
+        display: none;
+    }
+    
+    nav{
+        grid-column: 1/4;
+    }
+
+    footer {
+        grid-template-columns: 1fr;
+    }
+    
+    footer img {
+        width: 200px;
+    }
+    
+    footer p {
+        text-align: center;
+    }
+
+    footer a {
+        text-decoration: none;
+        color: black;
+        font-family: "lato", Arial, Helvetica, sans-serif;
+    }
+
+    
+
+    img{
+        max-width: 90%;
+    }
+
+    #hero-img{
+        max-width: 100%;
+    }
+    
 }
 
 
